--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "vue": "^2.5.16",
         "vue-router": "^3.0.1",
         "vue-video-player": "^5.0.2",
+        "vued3tree": "^3.5.0",
         "vuex": "^3.0.0",
         "zxcvbn": "^4.4.2"
     }
