--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "chart.js": "^2.7.2",
         "chartjs-plugin-datalabels": "^0.3.0",
         "css-element-queries": "^1.0.2",
+        "d3": "^5.4.0",
         "date-fns": "2.0.0-alpha.7",
         "favico.js": "^0.3.10",
         "file-saver": "^1.3.8",
@@ -79,8 +80,10 @@
         "v-tooltip": "^2.0.0-rc.32",
         "video.js": "^7.0.3",
         "vue": "^2.5.16",
+        "vue-d3": "^0.1.0",
         "vue-router": "^3.0.1",
         "vue-video-player": "^5.0.2",
+        "vue2-d3": "0.0.1",
         "vued3tree": "^3.5.0",
         "vuex": "^3.0.0",
         "zxcvbn": "^4.4.2"
