--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "popper.js": "^1.14.3",
         "pusher-js": "^4.2.2",
         "raven-js": "^3.25.2",
+        "sass": "^1.5.1",
         "textarea-caret": "^3.1.0",
         "tooltip.js": "^1.2.0",
         "v-click-outside": "^1.0.4",
