--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
         "chartjs-plugin-datalabels": "^0.3.0",
         "css-element-queries": "^1.0.2",
         "d3": "^5.4.0",
+        "d3-force": "^1.1.0",
         "date-fns": "2.0.0-alpha.7",
+        "dtree": "0.0.7",
         "favico.js": "^0.3.10",
         "file-saver": "^1.3.8",
         "flag-icon-css": "^3.0.0",
@@ -72,9 +74,11 @@
         "npm": "^6.1.0",
         "nprogress": "^0.2.0",
         "popper.js": "^1.14.3",
+        "pug": "^2.0.3",
         "pusher-js": "^4.2.2",
         "raven-js": "^3.25.2",
         "sass": "^1.5.1",
+        "stylus": "^0.54.5",
         "textarea-caret": "^3.1.0",
         "tooltip.js": "^1.2.0",
         "v-click-outside": "^1.0.4",
@@ -82,6 +86,7 @@
         "video.js": "^7.0.3",
         "vue": "^2.5.16",
         "vue-d3": "^0.1.0",
+        "vue-d3-network": "^0.1.24",
         "vue-router": "^3.0.1",
         "vue-video-player": "^5.0.2",
         "vue2-d3": "0.0.1",
