--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/framework": "5.6.*",
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
+        "rachidlaasri/laravel-installer": "^4.0",
         "sentry/sentry-laravel": "^0.8.0"
     },
     "require-dev": {
