Revert Pedigree. Work in progress for converting suitable for Vue

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/enso.js": "/js/enso.js?id=49feefb3bdfdc44dd7e6",
-    "/css/enso.css": "/css/enso.css?id=29de7037a2dc887b2add",
-    "/js/enso.js.map": "/js/enso.js.map?id=0660cd34993c570b3631",
-    "/css/enso.css.map": "/css/enso.css.map?id=64150d186ffb230761af"
+    "/js/enso.js": "/js/enso.js",
+    "/css/enso.css": "/css/enso.css"
 }
