--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "chartjs-plugin-datalabels": "^0.3.0",
         "css-element-queries": "^1.0.2",
         "d3": "^5.4.0",
+        "d3-dtree": "^2.0.2",
         "d3-force": "^1.1.0",
         "date-fns": "2.0.0-alpha.7",
         "dtree": "0.0.7",
