--- a/package.json
+++ b/package.json
@@ -59,15 +59,17 @@
         "chart.js": "^2.7.2",
         "chartjs-plugin-datalabels": "^0.3.0",
         "css-element-queries": "^1.0.2",
-        "d3": "^5.4.0",
+        "d3": "^4.13.0",
         "d3-dtree": "^2.0.2",
         "d3-force": "^1.1.0",
+        "d3-webpack-loader": "^0.1.1",
         "date-fns": "2.0.0-alpha.7",
         "dtree": "0.0.7",
         "favico.js": "^0.3.10",
         "file-saver": "^1.3.8",
         "flag-icon-css": "^3.0.0",
         "flatpickr": "^4.5.0",
+        "fs": "0.0.1-security",
         "highlight.js": "^9.12.0",
         "intro.js": "^2.9.3",
         "laravel-echo": "^1.4.0",
