--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,23 @@
 language: php
+
+php:
+  - 7.2
+
+before_script:
+  - cp .env.travis .env
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+  - php artisan key:generate
+  - php artisan migrate
+
+before_install:
+  - mysql -e 'CREATE DATABASE homestead;'
+
+script:
+  - phpunit
+
+services:
+  - mysql
+
+notifications:
+email: false
