--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,23 @@ before_script:
 
 before_install:
   - mysql -e 'CREATE DATABASE homestead;'
-
+npm run dev
 script:
   - phpunit
 
 services:
   - mysql
+
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+
+dist: trusty
+
+sudo: required
 
 notifications:
 email: false
