--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "d3-webpack-loader": "^0.1.0",
         "date-fns": "2.0.0-alpha.10",
         "dtree": "0.0.7",
+        "extract-text-webpack-plugin": "^3.0.2",
         "favico.js": "^0.3.0",
         "file-saver": "^1.3.8",
         "flag-icon-css": "^3.0.0",
