--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
         "laravel-mix": "2.1.11",
         "node-sass": "4.9.0",
         "sass-loader": "7.0.3",
-        "vue-template-compiler": "2.5.16",
-        "webpack-cli": "^3.0.3"
+        "vue-template-compiler": "2.5.16"
     },
     "name": "enso",
     "description": "[![Build Status](https://travis-ci.org/laravel/framework.svg)](https://travis-ci.org/laravel/framework) [![Total Downloads](https://poser.pugx.org/laravel/framework/d/total.svg)](https://packagist.org/packages/laravel/framework) [![Latest Stable Version](https://poser.pugx.org/laravel/framework/v/stable.svg)](https://packagist.org/packages/laravel/framework) [![Latest Unstable Version](https://poser.pugx.org/laravel/framework/v/unstable.svg)](https://packagist.org/packages/laravel/framework) [![License](https://poser.pugx.org/laravel/framework/license.svg)](https://packagist.org/packages/laravel/framework)",
@@ -66,13 +65,15 @@
         "d3-webpack-loader": "0.1.1",
         "date-fns": "2.0.0-alpha.10",
         "dtree": "0.0.7",
-        "extract-text-webpack-plugin": "3.0.2",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "favico.js": "0.3.10",
         "file-saver": "1.3.8",
         "flag-icon-css": "3.0.0",
         "flatpickr": "4.5.0",
+        "friendly-errors-webpack-plugin": "^1.7.0",
         "fs": "0.0.2",
         "highlight.js": "9.12.0",
+        "html-webpack-plugin": "^3.2.0",
         "intro.js": "2.9.3",
         "laravel-echo": "1.4.0",
         "lodash": "4.17.10",
@@ -84,21 +85,24 @@
         "pusher-js": "4.2.2",
         "raven-js": "3.26.1",
         "sass": "1.5.1",
+        "sass-resources-loader": "^1.3.3",
         "stylus": "0.54.5",
         "textarea-caret": "3.1.0",
         "tooltip.js": "1.2.0",
         "v-click-outside": "1.0.5",
         "v-tooltip": "2.0.0-rc.32",
         "video.js": "7.0.3",
-        "vue": "2.5.16",
+        "vue": "^2.5.16",
         "vue-d3": "0.1.0",
         "vue-d3-network": "0.1.24",
+        "vue-loader": "^15.2.4",
         "vue-router": "3.0.1",
+        "vue-style-loader": "^4.1.0",
         "vue-video-player": "5.0.2",
         "vue2-d3": "0.0.1",
         "vued3tree": "3.5.0",
         "vuex": "3.0.1",
-        "webpack": "4.12.0",
+        "webpack": "^3.12.0",
         "webpack-chunk-hash": "^0.6.0",
         "webpack-cli": "3.0.3",
         "zxcvbn": "4.4.2"
