--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "chart.js": "2.7.2",
         "chartjs-plugin-datalabels": "0.3.0",
         "css-element-queries": "1.0.2",
+        "d3": "^5.4.0",
         "date-fns": "2.0.0-alpha.7",
         "favico.js": "0.3.10",
         "file-saver": "1.3.8",
@@ -67,7 +68,7 @@
         "highlight.js": "9.12.0",
         "intro.js": "2.9.3",
         "laravel-echo": "1.4.0",
-        "lodash": "4.17.10",
+        "lodash": "^4.17.10",
         "nprogress": "0.2.0",
         "popper.js": "1.14.3",
         "pusher-js": "4.2.2",
@@ -78,6 +79,7 @@
         "v-tooltip": "2.0.0-rc.32",
         "video.js": "7.0.3",
         "vue": "2.5.16",
+        "vue-d3-network": "^0.1.24",
         "vue-router": "3.0.1",
         "vue-video-player": "5.0.2",
         "vuex": "3.0.1",
