--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "chartjs-plugin-datalabels": "0.3.0",
         "css-element-queries": "1.0.2",
         "d3": "^5.4.0",
+        "d3-dtree": "^2.0.2",
         "date-fns": "2.0.0-alpha.7",
         "favico.js": "0.3.10",
         "file-saver": "1.3.8",
