--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "vue-d3-network": "^0.1.24",
         "vue-router": "^3.0.1",
         "vue-video-player": "^5.0.2",
+        "vued3tree": "^3.5.0",
         "vuex": "^3.0.0",
         "zxcvbn": "^4.4.2"
     }
