Neo4j is now working as alternative database. Work in progress and does not affect current database yet. Add gender validation fixes. Create individual now works.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_CONNECTION_SECOND=neo4j
+DB_HOST_SECOND=127.0.0.1
+DB_PORT_SECOND=7474
+DB_USERNAME_SECOND=homestead
+DB_PASSWORD_SECOND=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
