--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
         "rachidlaasri/laravel-installer": "^4.0",
-        "sentry/sentry-laravel": "^0.9.0"
+        "sentry/sentry-laravel": "^0.9.0",
+	"vinelab/neoeloquent": "^1.4.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
