Update references from laravel-genealogy to modulargenealogy. The project has been renamed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   genealogy-server:
     build: ./provisioning
-    image: laravel-genealogy
+    image: modulargenealogy
     depends_on:
       - mysql
     volumes:
