--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "modularsoftware/genealogy",
-    "description": "Modular Genealogy can be a solid start for any SPA based on Laravel 5.6, Vue and Bulma",
+    "description": "Modular Genealogy can be a solid start for any family tree project. SPA based on Enso (Laravel 5.6, Vue and Bulma)",
     "license": "MIT",
     "type": "project",
     "require": {
