Modify environment and naming

--- a/.env.docker
+++ b/.env.docker
@@ -7,16 +7,16 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_USERNAME=root
 DB_PASSWORD=secret
 
 DB_CONNECTION_SECOND=neo4j
-DB_HOST_SECOND=127.0.0.1
+DB_HOST_SECOND=neo4j
 DB_PORT_SECOND=7474
-DB_USERNAME_SECOND=homestead
+DB_USERNAME_SECOND=neo4j
 DB_PASSWORD_SECOND=secret
 
 BROADCAST_DRIVER=log
