--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/framework": "5.6.*",
         "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
+        "mrkrstphr/php-gedcom": "^1.0",
         "sentry/sentry-laravel": "^0.9.0",
         "vinelab/neoeloquent": "^1.4.6"
     },
