--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
 
 
 before_install:
-  - chmod +x .ci/docker-run.sh; .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
+  - chmod +x .ci/docker-run.sh; bash .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
   - npm install
   - npm run dev
 script:
