--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,17 @@ services:
   - neo4j
 
 env:
+  - IMAGE=mysql:5.7
+    NAME=mysql
+    OMIT_FEATURES=RsaEncryption,CachingSha2Password,Tls12,UuidToBin
   - IMAGE=mysql:8.0
     NAME=mysql
     OMIT_FEATURES=None
+
+before_install:
+  - chmod +x .ci/docker-run.sh; bash.ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
+  - npm install
+  - npm run dev
 
 language: php
 
@@ -28,11 +36,6 @@ before_script:
   - php artisan migrate
   - composer update --prefer-dist
 
-
-before_install:
-  - chmod +x .ci/docker-run.sh; bash .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
-  - npm install
-  - npm run dev
 script:
   #- phpunit --coverage-clover coverage.xml
   - phpunit
