Travis attempt with different port.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,9 @@ services:
   - docker
   - neo4j
 
-env:
-  - IMAGE=mysql:5.7
-    NAME=mysql
-    OMIT_FEATURES=RsaEncryption,CachingSha2Password,Tls12,UuidToBin
-  - IMAGE=mysql:8.0
-    NAME=mysql
-    OMIT_FEATURES=None
-
 before_install:
-  - chmod +x .ci/docker-run.sh && bash .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
-##  - sudo docker run -d -p 3306:3306 mysql:8.0
+##  - chmod +x .ci/docker-run.sh && bash .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
+  - sudo docker run -d -p 3307:3307 mysql:8.0
   - npm install
   - npm run dev
 
