--- a/.env.travis
+++ b/.env.travis
@@ -2,7 +2,7 @@ APP_ENV=testing
 APP_KEY=randomkeyreplacethis
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=0.0.0.0
 DB_PORT=3307
 DB_DATABASE=homestead
 DB_USERNAME=root
