--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_install:
 ##  - chmod +x .ci/docker-run.sh && bash .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
-  - sudo docker run -d -p 3307:3307 mysql:8.0 -e MYSQL_DATABASE=homestead -e MYSQL_ROOT_PASSWORD=test
+  - sudo docker run -d -p 3307:3307 mysql:8.0 -e MYSQL_ROOT_PASSWORD=test
 
 language: php
 
@@ -20,6 +20,7 @@ cache:
     - $HOME/.composer/cache
 
 before_script:
+  - mysql -h 0.0.0.0 -ptest -e 'create database homestead;'
   - cp .env.travis .env
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
