--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ cache:
     - $HOME/.composer/cache
 
 before_script:
-  - mysql -h 0.0.0.0 -ptest -e 'create database homestead;'
+  - mysql --host 0.0.0.0 --port 3307 -ptest -e 'create database homestead;'
   - cp .env.travis .env
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
