--- a/.env.travis
+++ b/.env.travis
@@ -2,7 +2,7 @@ APP_ENV=testing
 APP_KEY=randomkeyreplacethis
 
 DB_CONNECTION=mysql
-DB_HOST=172.17.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=travis
