--- a/.env.travis
+++ b/.env.travis
@@ -2,8 +2,8 @@ APP_ENV=testing
 APP_KEY=randomkeyreplacethis
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=travis
-DB_PASSWORD=test
+DB_DATABASE=testdb
+DB_USERNAME=root
+DB_PASSWORD=
