Travis memory for MySQL.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,6 @@ services:
   - docker
   - neo4j
 
-before_install:
-##  - chmod +x .ci/docker-run.sh && bash .ci/docker-run.sh $IMAGE $NAME 3307 $OMIT_FEATURES
-##  - sudo service mysql stop
-##  - sudo docker run -d -p 3306:3306 mysql:8.0 --link mysql --name mysql -e MYSQL_USER=travis -e MYSQL_PASSWORD=test -e MYSQL_DATABASE=homestead -e MYSQL_ROOT_PASSWORD=test
-
 language: php
 
 php:
@@ -26,8 +21,8 @@ matrix:
         #
         # Define versions of MySQL and MariaDB to test against.
         # mysql 5.6
-        - php: 7.2
-          env: DB=mysql:5.6
+        #- php: 7.2
+        #  env: DB=mysql:5.6
         #
         # Define versions of MySQL and MariaDB to test against.
         # mysql 5.6
@@ -35,7 +30,7 @@ matrix:
           env: DB=mysql:5.7
         #
         # Define versions of MySQL and MariaDB to test against.
-        # mysql 5.6
+        # mysql 8.0
         - php: nightly
           env: DB=mysql:8.0
         # ...
