--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laravel-enso/enso",
-    "description": "Laravel Enso can be a solid start for any SPA based on Laravel 5.6, Vue and Bulma",
+    "name": "modularsoftware/genealogy",
+    "description": "Project to enable genealogists to manage their own data securely.",
     "license": "MIT",
     "type": "project",
     "require": {
