Temporary change to family. Edit individual now has contacts again as bug fix upstream.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/enso.js": "/js/enso.js",
-    "/css/enso.css": "/css/enso.css"
+    "/css/enso.css": "/css/enso.css",
+    "/themes/light/bulma.min.css": "/themes/light/bulma.min.css",
+    "/themes/dark/bulma.min.css": "/themes/dark/bulma.min.css"
 }
