--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Enso
+APP_NAME=Genealogy
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=system
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=enso
+DB_DATABASE=genealogy
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 DB_TENANT_DATABASE=tenant
 
@@ -47,4 +47,4 @@ PASSWORD_UPPER_CASE_CHARACTERS=0
 PASSWORD_NUMERIC_CHARACTERS=0
 PASSWORD_SPECIAL_CHARACTERS=0
 
-ENSO_API_TOKEN=adrian
+ENSO_API_TOKEN=genealogy
