--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME=Enso
+APP_NAME=Genealogy
 APP_ENV=testing
 APP_KEY=base64:GS0VwCqzgSVBnM0Wz/Ig610q86M+GIvyVmzQQvrL7Xw=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=enso
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -41,4 +41,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TELESCOPE_ENABLED=0
-ENSO_API_TOKEN=adrian
+ENSO_API_TOKEN=genealogy
