--- a/.cloud/nginx/nginx.conf
+++ b/.cloud/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server {
-  listen 8000;
+  listen 80;
   index index.php index.html index.htm;
   root /application/public; # default Laravel's entry point for all requests
 
@@ -13,7 +13,7 @@ server {
 
   location ~ \.php$ {
     fastcgi_index index.php;
-    fastcgi_pass blog-server:9000; # address of a fastCGI server
+    fastcgi_pass genealogy-server:9000; # address of a fastCGI server
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_path_info;
     include fastcgi_params;
