--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  blog-server:
+  genealogy-server:
     build: .cloud/docker
     image: genealogy
     depends_on:
@@ -41,12 +41,12 @@ services:
   nginx:
     image: nginx
     ports:
-      - "8000:8000"
+      - "80:80"
     volumes:
       - .cloud/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:cached
       - ./:/application:cached
     depends_on:
-      - blog-server
+      - genealogy-server
 
   redis:
     image: redis
