--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
     },
     "false": {},
     "dependencies": {
-        "@enso-ui/accessories": "^1.0.0",
-        "@enso-ui/bulma": "^1.0.0",
-        "@enso-ui/directives": "^1.0.1",
-        "@enso-ui/forms": "^1.0.1",
-        "@enso-ui/mixins": "^1.0.0",
-        "@enso-ui/select": "^1.0.2",
-        "@enso-ui/tables": "^1.0.0",
-        "@enso-ui/themes": "^1.0.0",
-        "@enso-ui/transitions": "^1.0.1",
-        "@enso-ui/ui": "^1.0.0",
+        "@enso-ui/accessories": "github:enso-ui/accessories",
+        "@enso-ui/bulma": "^1.0.31",
+        "@enso-ui/directives": "^1.0.8",
+        "@enso-ui/forms": "^1.0.20",
+        "@enso-ui/mixins": "^1.0.3",
+        "@enso-ui/select": "^1.0.23",
+        "@enso-ui/tables": "^1.0.24",
+        "@enso-ui/themes": "^1.0.19",
+        "@enso-ui/transitions": "^1.0.10",
+        "@enso-ui/ui": "github:enso-ui/ui",
         "@fortawesome/fontawesome-free": "^5.2.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.2",
         "@fortawesome/free-brands-svg-icons": "^5.2.0",
@@ -59,6 +59,7 @@
         "animate.css": "^3.6.1",
         "axios": "^0.18",
         "bulma": "^0.7.2",
+        "npm": "^5.10.0",
         "opencollective": "^1.0.3",
         "opencollective-postinstall": "^2.0.0",
         "patch-package": "^6.0.2",
