Fixes to run under Windows Docker.

--- a/composer.json
+++ b/composer.json
@@ -68,8 +68,13 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform": {
+            "ext-pcntl": "7.3",
+            "ext-posix": "7.3"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
+
