--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "prod": "npm run production",
         "hmr": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "postinstall": "opencollective-postinstall && patch-package"
+        "postinstall": "opencollective-postinstall"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
